[package]
name = "process-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.55.2"
aws-sdk-s3 = "0.27.0"
tokio = { version = "1", features = ["full"] }
